--- a/app/src/main/res/layout/fragment_tab_invoice.xml
+++ b/app/src/main/res/layout/fragment_tab_invoice.xml
@@ -14,12 +14,14 @@
 
     </data>
 
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:id="@+id/linearLayout">
+
 
                 <ScrollView
                     android:layout_width="match_parent"
@@ -413,11 +415,12 @@
                         <ProgressBar
                             android:id="@+id/progressBar"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="15dp"
                             android:layout_alignParentEnd="true"
                             android:layout_centerInParent="true"
-                            android:indeterminate="true"
+                            android:layout_gravity="center"
                             android:visibility="gone"
+                            android:indeterminate="true"
                             style="?android:attr/progressBarStyleHorizontal"/>
 
                     </androidx.cardview.widget.CardView>
