--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -322,6 +322,18 @@
                                 app:layout_constraintTop_toTopOf="parent"
                                 android:text='@{"Total items : "+invoice.totalItems}'
                                 tools:text="Total items : 2"/>
+                            <TextView android:fontFamily="@font/montserrat_regular"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"
+                                android:textStyle="bold"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/tvTotalItems"
+                                android:id="@+id/tvTotalQty"
+                                android:layout_weight="1"
+                                android:layout_marginStart="10dp"
+                                android:textColor="@color/text_color_main"
+                                tools:text="Items: 3"/>
                             <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_medium"
                                 android:id="@+id/tvCash"
                                 android:layout_width="wrap_content"
@@ -332,7 +344,7 @@
                                 android:visibility="@{invoice.cashAmount==null||invoice.cashAmount==0 ? View.GONE : View.VISIBLE }"
                                 android:layout_marginStart="10dp"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@id/tvTotalItems"
+                                app:layout_constraintTop_toBottomOf="@id/tvTotalQty"
                                 android:text='@{"Cash : RS "+invoice.cashAmount}'
                                 tools:text="Cash : 1020.00 "/>
                             <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_medium"
