--- a/app/src/main/res/layout/item_product_home.xml
+++ b/app/src/main/res/layout/item_product_home.xml
@@ -47,6 +47,7 @@
                 android:text="@{productHome.productPrice}"
                 android:textColor="@color/colorPrimary"
                 android:paddingBottom="4dp"
+                android:textStyle="bold"
                 tools:text="Rs 200" />
 
             <TextView android:fontFamily="@font/montserrat_regular"
@@ -54,7 +55,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/tvProductName"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:textColorRnG="@{productHome.productStock}"
                 android:text="@{productHome.productStock}"
+                android:textStyle="bold"
                 android:paddingBottom="4dp"
                 tools:text="200" />
 
