logo updation issue

--- a/app/src/main/res/layout/fragment_edit_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_item_bottom_sheet.xml
@@ -130,6 +130,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textSize="24sp"
+                            android:id="@+id/txtMinus"
                             android:gravity="center"
                             android:background="@drawable/corner_four_red"
                             android:textColor="@color/red"
@@ -172,6 +173,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textSize="24sp"
+                            android:id="@+id/txtPlus"
                             android:gravity="center"
                             android:background="@drawable/corner_four_grey"
                             android:textColor="@color/colorPrimary"
@@ -218,6 +220,7 @@
                 android:background="@drawable/corner_four_red"
                 android:gravity="center"
                 android:padding="1dp"
+                android:id="@+id/btnDelete"
                 android:layout_marginStart="@dimen/_30dp"
                 android:layout_marginTop="@dimen/_20dp"
                 android:orientation="horizontal"
